--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="content">
 
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src='transit/'
+      <img src='images/'
         
     </div>
   </div>
