--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="content">
 
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src='images/'
+      <img src='images/transportation/transit.jpg' alt='transit'>
         
     </div>
   </div>
